fix up API, fix a few issues found along the way
