# model/model.swagger.json
@@ -298,6 +298,38 @@
           "FlowService"
         ]
       }
+    },
+    "/v1/flow/{graph_id}/value": {
+      "post": {
+        "operationId": "AddValueStage",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/modelAddStageResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "graph_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/modelAddCompletedValueStageRequest"
+            }
+          }
+        ],
+        "tags": [
+          "FlowService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -317,6 +349,24 @@
           }
         }
       }
+    },
+    "modelAddCompletedValueStageRequest": {
+      "type": "object",
+      "properties": {
+        "graph_id": {
+          "type": "string"
+        },
+        "value": {
+          "$ref": "#/definitions/modelCompletionResult"
+        },
+        "code_location": {
+          "type": "string"
+        },
+        "caller_id": {
+          "type": "string"
+        }
+      },
+      "title": "AddCompletedValueStageRequest creates a new stage with a specific value"
     },
     "modelAddDelayStageRequest": {
       "type": "object",
